fix(header): Header input too long on Android 4.2, closes #1081

--- a/scss/_bar.scss
+++ b/scss/_bar.scss
@@ -59,7 +59,9 @@
 
       input {
         padding-left: 8px;
+        width: 94%;
         height: 28px;
+        background: transparent;
       }
     }
   }
